--- a/annotationengine/templates/index.html
+++ b/annotationengine/templates/index.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-<p><a href="{{url_for('views.index')}}">Datasets</a></p>
+<p><a href="{{url_for('views.index')}}">Aligned Volumes</a></p>
 
 {% endblock %}
