--- a/annotationengine/templates/aligned_volumes.html
+++ b/annotationengine/templates/aligned_volumes.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Datasets:{% endblock %}</h1>
+  <h1>{% block title %}Aligned Volumes:{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
