--- a/annotationengine/templates/base.html
+++ b/annotationengine/templates/base.html
@@ -7,7 +7,7 @@
   </li>
 
     <li>
-          <a href="{{url_for('views.index')}}">Datasets</a>    
+          <a href="{{url_for('views.index')}}">Aligned Volumes</a>    
     </li>
     <li>
         <a href="/annotation/api/doc">API doc</a>    
