--- a/annotationengine/templates/table.html
+++ b/annotationengine/templates/table.html
@@ -4,4 +4,10 @@
   <h1>{% block title %}{{aligned_volume_name}} {{table_name}}{% endblock %}</h1>
 {% endblock %}
 
-<h3>{{aligned_volume_name + "  " + table_name}}</h3>
+{% block content %}
+<p>
+# annotations: {{table_size}}</p>
+<p>
+Description: {{table_description}}
+</p>
+{% endblock %}
